--- a/AGT.GalacticArchives.Core/AGT.GalacticArchives.Core.csproj
+++ b/AGT.GalacticArchives.Core/AGT.GalacticArchives.Core.csproj
@@ -32,4 +32,8 @@
         </AdditionalFiles>
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Models\Requests\Entities\UserSubmissions\" />
+    </ItemGroup>
+
 </Project>
