--- a/AGT.GalacticArchives.Services/AGT.GalacticArchives.Services.csproj
+++ b/AGT.GalacticArchives.Services/AGT.GalacticArchives.Services.csproj
@@ -30,4 +30,9 @@
         </AdditionalFiles>
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Interfaces\Application\" />
+      <Folder Include="Services\Application\" />
+    </ItemGroup>
+
 </Project>
